styles.css
@keyframes shine {
    to {
      background-position-x: -200%;
    }
  }

img 
{
    pointer-events: none;
}

#body
{
    background-color: rgb(144, 213, 255);;
    margin: 0px;
}

#header
{
    text-align: center;
}

#header > h1
{
    font-family: roboto, sans-serif;
    color: rgb(10, 10, 89);
}

#main
{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

.imgDiv > img
{
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
}

.imgDiv
{
    padding: 10px;
    max-height: 400px;
    height: 40vh;
    display: flex;
}

.header
{
    position: sticky;
    top: 0px;
    background-color: #0e2d8b;
    padding-left: 20px;
    font-family: roboto, sans-serif;
    font-size: 30px;
    font-weight: bold;
    box-shadow: 0px 0px 10px #00000017;
    width: 100%;
    color: #f8ffd9;
}


#pop-up
{
    background-color: aliceblue;
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
}

#popupImage
{
    margin: auto;
    height: 90vh;
    width: 90vw;
}

#closeButton
{
    position: fixed;
    top: 15px;
    right: 15px;
}

/*
#loader
{
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-evenly;
}

.imgDiv#loaderCard
{
    text-align: center;
    height: 30vh;
    background-color: rgb(213, 216, 55);
    margin: 10px;
    background: linear-gradient(110deg, #ffee02 8%, #fff780 18%, #ffee02 33%);
    animation: 1.5s shine linear infinite;
    background-size: 200% 100%;
    font-family: roboto, sans-serif;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: large;
    font-weight: bolder;
    color: #a79d18;
}
*/

